--- a/src/blog.html
+++ b/src/blog.html
@@ -88,10 +88,10 @@
                                         <img src="../src/Images/Avatar.png" class="author-image" alt="Placeholder image">
                                     </div>
                             <div class="media-content has-text-centered">
-                                <p class="title article-title">Introducing a new feature for paid subscribers</p>
+                                <p class="title article-title">AODY OHHH !!</p>
                                 <div class="tags has-addons level-item">
-                                    <span class="tag is-rounded is-info">@skeetskeet</span>
-                                    <span class="tag is-rounded">May 10, 2018</span>
+                                    <span class="tag is-rounded is-info">@jonasandrox</span>
+                                    <span class="tag is-rounded">May 15, 2019</span>
                                 </div>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                             <p>Non arcu risus quis varius quam quisque. Dictum varius duis at consectetur lorem. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. </p>
                             <p>Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Accumsan lacus vel facilisis volutpat. Non sodales neque sodales ut etiam.
                                 Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus.</p>
-                            <h3 class="has-text-centered">How to properly center tags in bulma?</h3>
+                            <h3 class="has-text-centered">AIZA HIFANINTSANANA !?</h3>
                             <p> Proper centering of tags in bulma is done with class: <pre>level-item</pre>
                                 Voluptat ut farmacium tellus in metus vulputate. Feugiat in fermentum posuere urna nec. Pharetra convallis posuere morbi leo urna molestie.
                                 Accumsan lacus vel facilisis volutpat est velit egestas. Fermentum leo vel orci porta. Faucibus interdum posuere lorem ipsum.</p>
