--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                  <div class="container">
                      <div class="navbar-brand">
                          <a class="navbar-item" href="">
-                             <img src="" alt="Logo">
+                             <img src="img/loho_header.png" alt="Logo">
                          </a>
                          <span class="navbar-burger burger" data-target="navbarMenu">
                              <span></span>
@@ -157,15 +157,15 @@
                      </div>
                      <div class="column is-6 is-offset-1">
                          <h1 class="title is-2">
-                             Superhero Scaffolding
+                             <img src="img/tafita_ltr.png" alt="logo2">
                          </h1>
                          <h2 class="subtitle is-4">
-                             Let this cover page describe a product or service.
+                             Pour une éducation plus facile
                          </h2>
                          <br>
                          <p class="has-text-centered">
                              <a class="button is-medium is-info is-outlined">
-                                 Learn more
+                                 ENTRER
                              </a>
                          </p>
                      </div>
@@ -177,7 +177,7 @@
              <div class="container">
                  <div class="tabs is-centered">
                      <ul>
-                         <li><a>And this is the bottom</a></li>
+                         <li><a>© HKUI - TEAM BANDI</a></li>
                      </ul>
                  </div>
              </div>
