--- a/src/index.html
+++ b/src/index.html
@@ -48,28 +48,6 @@
                                     <span title="Hello from the other side">S'inscrire</span>
                                 </a>
                             </span>
-
-                            <!-- <div class="navbar-item has-dropdown is-hoverable">
-                                <a class="navbar-link">
-                                    Account
-                                </a>
-                                <div class="navbar-dropdown">
-                                    <a class="navbar-item">
-                                        Dashboard
-                                    </a>
-                                    <a class="navbar-item">
-                                        Profile
-                                    </a>
-                                    <a class="navbar-item">
-                                        Settings
-                                    </a>
-                                    <hr class="navbar-divider">
-                                    <div class="navbar-item">
-                                        Logout
-                                    </div>
-                                </div>
-                            </div> -->
-
                         </div>
                     </div>
                 </div>
@@ -243,17 +221,16 @@
     </section>
     <div class="box cta">
         <p class="has-text-centered">
-            <span class="tag is-primary">New</span> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            ut aliquip ex ea commodo consequat.
+            <span class="tag is-link">New</span> AODY OHHH !! AIZA HIFANINTSANANA !?
         </p>
     </div>
     <section class="container">
         <div class="columns features">
             <div class="column is-4">
                 <div class="card is-shady">
-                    <div class="card-image has-text-centered">
-                        <i class="fa fa-empire"></i>
-                    </div>
+                    <figure class="has-text-centered">
+                        <img src="img/OBJECTS.svg">
+                      </figure>
                     <div class="card-content">
                         <div class="content">
                             <h4>Tristique senectus et netus et. </h4>
@@ -267,8 +244,8 @@
             </div>
             <div class="column is-4">
                 <div class="card is-shady">
-                    <div class="card-image has-text-centered">
-                        <i class="fa fa-empire"></i>
+                    <div class="has-text-centered">
+                        <img src="img/OBJECTS2.png" alt="">
                     </div>
                     <div class="card-content">
                         <div class="content">
@@ -284,8 +261,8 @@
             </div>
             <div class="column is-4">
                 <div class="card is-shady">
-                    <div class="card-image has-text-centered">
-                        <i class="fa fa-apple"></i>
+                    <div class="has-text-centered">
+                        <img src="img/objects3.png" alt="">
                     </div>
                     <div class="card-content">
                         <div class="content">
