--- a/src/blog.html
+++ b/src/blog.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="">
-                        <img src="../src/Images/logo3.png" alt="Logo">
+                        <img src="../src/Images/loho_header.png" alt="Logo">
                     </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
                         <span></span>
