--- a/src/blog.html
+++ b/src/blog.html
@@ -261,7 +261,7 @@
                     <div class="card-content">
                         <div class="media">
                                 <div class="media-center">
-                                        <img src="../src/Images/Avatar.png" class="author-image" alt="Placeholder image">
+                                        <img src="../src/Images/jo.jpg" class="author-image" alt="Placeholder image">
                                     </div>
                             <div class="media-content has-text-centered">
                                 <p class="title article-title">AODY OHHH !!</p>
